RESOLVED FIXED269458
[Skia] Conic gradients don't respect interpolation and tiling settings
https://bugs.webkit.org/show_bug.cgi?id=269458
Summary [Skia] Conic gradients don't respect interpolation and tiling settings
Georges Basile Stavracas Neto
Reported 2024-02-15 04:56:07 PST
.
Attachments
Georges Basile Stavracas Neto
Comment 1 2024-02-15 04:58:34 PST
EWS
Comment 2 2024-02-15 05:03:54 PST
Committed 274721@main (9ccb325015eb): <https://commits.webkit.org/274721@main> Reviewed commits have been landed. Closing PR #24507 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-15 05:04:13 PST
Note You need to log in before you can comment on or make changes to this bug.