[Skia] Make conic gradient respect tile and interpolation https://bugs.webkit.org/show_bug.cgi?id=269458

Reviewed by Carlos Garcia Campos.

Use a variant of the SkGradientShader::MakeSweep() constructor that
receives the `tileMode` and `interpolation` variables.

* Source/WebCore/platform/graphics/skia/GradientSkia.cpp:
(WebCore::Gradient::shader):

Canonical link: https://commits.webkit.org/274721@main